--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color:black;
 }
 
 h1 {
@@ -14,15 +14,27 @@ p {
 
 img {
     border-radius:25px;
-    background: green;
+    background:green;
     padding:5px;
     width:300px;
     height:150px;
 }
 
+#newQuote {
+    background-color:yellow;
+}
+
+.tweet {
+    background-color:green;
+}
+
+.facebook {
+    background-color:blue;
+}
+
 .quotes {
   width:33%;
-  margin-right: auto;
+  margin-right:auto;
   margin-left:auto;
   border-color:red;
   border-style:solid;
