--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ img {
 .tweet {
     background-color:#00ff00;
 }
-.facebook {    background-color:#ff6600;
+#facebook {    background-color:#ff6600;
 }
 .quotes {
   width:50%;
